--- a/frontend/src/views/footerstyle.css
+++ b/frontend/src/views/footerstyle.css
@@ -1,35 +1,31 @@
-import styled from 'styled-components';
+/* import styled from 'styled-components'; */
    
-export const Box = styled.div`
+.bodyfoot {
   padding: 70px 50px;
   background: green;
   position: absolute;
   bottom: 0;
   width: 90%;
-  
+  padding: 60px 20px;
+  max-width: 1000px
+};
    
-  @media (max-width: 1000px) {
-    padding: 60px 20px;
-  }
-`;
+.containerfoot {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}; 
    
-export const Container = styled.div`
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 1000px;
-    margin: 0 auto;
-    /* background: red; */
-`
-   
-export const Column = styled.div`
+.colfoot {
   display: flex;
   flex-direction: column;
   text-align: left;
   margin-left: 60px;
-`;
+}; 
    
-export const Row = styled.div`
+.rowfoot {
   display: grid;
   grid-template-columns: repeat(auto-fill, 
                          minmax(185px, 1fr));
@@ -39,23 +35,22 @@ export const Row = styled.div`
     grid-template-columns: repeat(auto-fill, 
                            minmax(200px, 1fr));
   }
-`;
+}
    
-export const FooterLink = styled.a`
+.linkfoot{
   color: #fff;
   margin-bottom: 20px;
   font-size: 18px;
   text-decoration: none;
-   
   &:hover {
       color: black;
       transition: 200ms ease-in;
   }
-`;
+}
    
-export const Heading = styled.p`
+.headfoot{
   font-size: 24px;
   color: #fff;
   margin-bottom: 40px;
   font-weight: bold;
-`;
+}
