--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -16,9 +16,9 @@
   margin-top: 10px;
 }
 
-.logo {
-  width: 160px;
-  height: 70px;
+.footlogo {
+  width: 170px;
+  height: 135px;
   margin-left: 10px;
 }
 
