--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -9,13 +9,15 @@
   }
 
   
-.logo {
-	height: 40px;
+.headlogo {
+	height: 50px;
+	width: 75px;
   }
   
   .company-name {
-	font-size: 20px;
-	font-weight: bold;
+	font-size: 35px;
+	font-weight: bolder; 
+	color: white;
   }
   
   .signup-button {
