--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: green;
+    background-color: lightgreen;
   }
   
   .login-form {
@@ -13,7 +13,7 @@
     width: 300px;
     padding: 20px;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 10px;
   }
   
   .login-form h2 {
@@ -26,7 +26,7 @@
   }
   
   .form-field input {
-    width: 100%;
+    width: 92%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -48,5 +48,8 @@
   .signup-option a {
     color: white;
     text-decoration: underline;
+  }
+  #signuplink{
+    color: black;
   }
   
