--- a/frontend/src/css/regdriver.css
+++ b/frontend/src/css/regdriver.css
@@ -14,8 +14,9 @@
   }
   
   .car-image {
-    width: 100%;
-    max-width: 400px;
+    width: 170%;
+    max-width: 600px;
+    height: 100%;
   }
   
   .form-container {
@@ -56,6 +57,8 @@
     border-radius: 5px;
     width: 100%;
   }
-  
+  #egdriverconlink{
+    color: white;
+  }
   /* Additional styles as needed */
   
