integrated frontend and backend

--- a/frontend/src/css/listofrides.css
+++ b/frontend/src/css/listofrides.css
@@ -84,3 +84,16 @@
   .adbuttonlink{
     color: white;
   }
+
+  .success{
+    text-align: center;
+    color: green;
+    font-weight: bold;
+  }
+
+  
+  .error{
+    text-align: center;
+    color: red;
+    font-weight: bold;
+  }
