--- a/frontend/src/css/regdriver.css
+++ b/frontend/src/css/regdriver.css
@@ -61,4 +61,16 @@
     color: white;
   }
   /* Additional styles as needed */
+
+  .success{
+    text-align: center;
+    color: green;
+    font-weight: bold;
+  }
+
+  .error{
+    text-align: center;
+    color: red;
+    font-weight: bold;
+  }
   
