--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -68,3 +68,15 @@
     color: black;
 
   }
+
+  .success{
+    text-align: center;
+    color: green;
+    font-weight: bold;
+  }
+
+  .error{
+    text-align: center;
+    color: red;
+    font-weight: bold;
+  }
