integrated all other frontend bakend except rating

--- a/frontend/src/css/approval.css
+++ b/frontend/src/css/approval.css
@@ -57,3 +57,14 @@
     margin-top: 20px;
   }
   
+  .success{
+    text-align: center;
+    color: green;
+    font-weight: bold;
+  }
+  
+  .error{
+    text-align: center;
+    color: red;
+    font-weight: bold;
+  }
