--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -1,20 +1,22 @@
 /* signup.css */
 /********* Sign up styles ***********/ 
 .signup-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  /* display: flex;
+  flex-direction: column; */
+  /* align-items: center;
+  justify-content: center; */
+  /* height: 100vh; */
   background-color: white;
   color: black;
 }
 
 .signup-form {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   width: 300px;
   padding: 20px;
+  margin: 20px;
+  margin-inline: auto;
   background-color: white;
   border: solid yellowgreen 2px;
   border-radius: 10px;
@@ -35,7 +37,7 @@
 }
 
 .form-field input {
-  width: 100%;
+  /* width: 100%; */
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -53,7 +55,7 @@
 }
 
 .radio-options label {
-  display: flex;
+  display: flex !important;
   align-items: center;
 }
 
@@ -67,7 +69,8 @@ button {
 }
 
 .login-option {
-  margin-top: 20px;
+  margin: 20px;
+  text-align: center;
 }
 
 .login-option a {
