--- a/frontend/src/css/listofrides.css
+++ b/frontend/src/css/listofrides.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: stretch;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: white;
     background-size: cover;
     background-position: center;
@@ -18,7 +18,7 @@
     background-color: rgb(182, 173, 173);
     margin: 10px;
     border-radius: 5px;
-    height: 40%;
+    /* height: 40%; */
   }
   
   .car-image-container {
