--- a/frontend/src/css/regdriver.css
+++ b/frontend/src/css/regdriver.css
@@ -24,6 +24,8 @@
     margin: 0 auto;
     padding: 20px;
     background-color: #f2f2f2;
+    border: solid yellowgreen 2px;
+    border-radius: 10px;
   }
   
   .form-field {
