--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -17,11 +17,13 @@
   .company-name {
 	font-size: 30px !important;
 	font-weight: bolder !important; 
-	color: white !important;
+	color: rgb(180, 47, 47) !important;
+	flex: 1;
+    text-align: center;
   }
 
   .company-name a{
-	color: white !important;
+	color: rgb(85, 25, 25) !important;
 	text-decoration: none !important;
   }
   
