--- a/frontend/src/css/recentRidesList.css
+++ b/frontend/src/css/recentRidesList.css
@@ -3,6 +3,10 @@
     margin: 0 auto;
     padding: 20px;
   }
+
+  .ride-list h2{
+    text-align: center;
+  }
   
   ul {
     list-style: none;
@@ -18,11 +22,12 @@
   }
   
   button {
-    background-color: #007bff;
-    color: #fff;
+    background-color: green;
+    color: white;
     border: none;
-    padding: 8px 16px;
+    padding: 10px;
     cursor: pointer;
+    border-radius: 5px;
   }
   
   button:hover {
