3 admin pages, styled, changed layout bugs fixed

--- a/frontend/src/css/approval.css
+++ b/frontend/src/css/approval.css
@@ -11,6 +11,8 @@ h2 {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* serif */
 }
 
 .driver-details {
@@ -95,4 +97,23 @@ button.decline:active {
   text-align: center;
   color: red;
   font-weight: bold;
+}
+
+.buttons-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.additional-details td{
+  padding: 3px 15px;
+  margin: 2px;
+  border: 1px solid darkseagreen;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* serif */
+}
+
+.table-head{
+  font-weight: bold;
+  font-size: large;
 }
