--- a/frontend/src/css/adminhome.css
+++ b/frontend/src/css/adminhome.css
@@ -1,16 +1,19 @@
 /* adminhome.css */
 .admin-home {
-    display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+
   }
   
   .buttons-container {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 40px;
   }
   
   .green-button {
@@ -28,7 +31,10 @@
   .system-admin {
     font: bolder;
     font-size: xx-large;
-    font-display: column;
+    font-display: row;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
   .heading{
     display: block;
