--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -3,8 +3,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: green;
-	color: white;
+	background-color: whitesmoke;
+	color: black;
 	padding: 10px 20px;
   }
 
