all stylings, custom, vlaidations, bugs fixed.

--- a/frontend/src/css/drivermap.css
+++ b/frontend/src/css/drivermap.css
@@ -12,6 +12,9 @@
 
   .page-container {
     display: flex;
+    flex-direction: column;
+    align-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
   .left-side {
@@ -26,11 +29,11 @@
   .left-column,
   .right-column {
     flex: 1;
-    color: white;
+    color: black;
     padding: 20px;
-    background-color: rgb(182, 173, 173);
-    margin: 10px;
-    border-radius: 5px;
+    background-color: #f5f3f3;
+    margin: 15px;
+    border-radius: 15px;
     /* height: 40%; */
   }
   
@@ -71,7 +74,7 @@
     border: none;
     padding: 10px 20px;
     cursor: pointer;
-    margin-right: 50px;
+    margin-right: 0px;
   }
   
   #rideconfirmlink{
@@ -84,6 +87,9 @@
     line-height: 1.4;
     font-size: 1.875rem;
     text-align: center;
+    margin: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-top: 10px;
   }
 
   #carname{
@@ -109,4 +115,10 @@
     text-align: center;
     color: red;
     font-weight: bold;
+  }
+  p {
+    margin-bottom: 1rem;
+    margin-top: 0;
+    letter-spacing: 0.2px;
+    word-spacing: 2px;
   }
