--- a/frontend/src/css/regdriver.css
+++ b/frontend/src/css/regdriver.css
@@ -1,7 +1,8 @@
 /* DriverRegistration.css */
 
-.page-container {
+.total {
     display: flex;
+    flex-direction: row;
   }
   
   .left-side {
@@ -16,16 +17,16 @@
   .car-image {
     width: 170%;
     max-width: 600px;
-    height: 100%;
+    height: 50%;
   }
   
-  .form-container {
+  .dabba {
     max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f2f2f2;
-    border: solid yellowgreen 2px;
-    border-radius: 10px;
+  padding: 20px;
+  border: solid yellowgreen 2px;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   }
   
   .form-field {
